<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <TextView
        android:id="@+id/tvViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_all_80_item"
        android:textColor="@color/pink"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/ivCaixab4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        tools:layout_editor_absoluteX="32dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/boottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/item_selector"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/music"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMusic"
        app:srcCompat="@drawable/search"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/ibLupa"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_18"
        app:layout_constraintEnd_toEndOf="@+id/ivSearch"
        app:layout_constraintStart_toEndOf="@+id/etSearch"
        app:layout_constraintTop_toTopOf="@id/ivSearch"
        app:srcCompat="@drawable/lupa"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:backgroundTint="@color/grey_18"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/ivSearch"
        app:layout_constraintTop_toTopOf="@+id/ivSearch"
        tools:ignore="ContentDescription"
        android:autofillHints="Search" />

    <TextView
        android:id="@+id/tvAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ivSearch"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:text="@string/album"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSearch"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ivSearch"
        tools:layout_editor_absoluteX="313dp" />

    <ImageView
        android:id="@+id/ivCaixab1"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAll"
        app:srcCompat="@drawable/caixab"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivCold"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/coldplay"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvColdPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/coldplay_awarded_song"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivCold"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab1"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/tvJohn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/john_doe"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/ivCold"
        app:layout_constraintTop_toBottomOf="@+id/tvColdPlay"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <ImageButton
        android:id="@+id/ibPlay1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ibPontos"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab1"
        app:srcCompat="@drawable/ic_baseline_play_black_arrow_24"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPontos"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/pontos1"
        tools:layout_editor_absoluteX="359dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivCaixar"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCaixab1"
        app:srcCompat="@drawable/caixar"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPlay2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/salmao"
        app:layout_constraintEnd_toStartOf="@+id/ibPontos"
        app:layout_constraintTop_toTopOf="@+id/ivCaixar"
        app:srcCompat="@drawable/ic_baseline_play_black_arrow_24"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPontos2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/salmao"
        app:layout_constraintTop_toTopOf="@+id/ivCaixar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/pontos1"
        tools:layout_editor_absoluteX="359dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_sandman"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivMetallica"
        app:layout_constraintTop_toTopOf="@+id/ivCaixar"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvMetallica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/metallica"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/ivMetallica"
        app:layout_constraintTop_toBottomOf="@+id/tvEnter"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <ImageView
        android:id="@+id/ivMetallica"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@+id/ivCaixar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/metallica"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivCaixab2"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCaixar"
        app:srcCompat="@drawable/caixab"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPlay3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ibPontos"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab2"
        app:srcCompat="@drawable/ic_baseline_play_black_arrow_24"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPontos3"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/pontos1"
        tools:layout_editor_absoluteX="359dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvFade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fade_to_black"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivMetallica2"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab2"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/tvMetallica2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/metallica"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/ivMetallica2"
        app:layout_constraintTop_toBottomOf="@+id/tvFade"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivMetallica2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/metallica2"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivCaixab3"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCaixab2"
        app:srcCompat="@drawable/caixab"
        tools:ignore="ContentDescription"/>


    <ImageView
        android:id="@+id/ivLinkin"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/linkinpark"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPlay4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ibPontos"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab3"
        app:srcCompat="@drawable/ic_baseline_play_black_arrow_24"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPontos4"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/pontos1"
        tools:layout_editor_absoluteX="359dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvInTheEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/in_the_end"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivLinkin"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab3"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/tvLinkinPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/linkin_park"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/ivLinkin"
        app:layout_constraintTop_toBottomOf="@+id/tvInTheEnd"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />


    <ImageView
        android:id="@+id/ivCaixab4"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCaixab3"
        app:srcCompat="@drawable/caixab"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivAkon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/akon"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPlay5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ibPontos"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab4"
        app:srcCompat="@drawable/ic_baseline_play_black_arrow_24"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/ibPontos5"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/pontos1"
        tools:layout_editor_absoluteX="359dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvWhatYouGot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/what_you_got"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivAkon"
        app:layout_constraintTop_toTopOf="@+id/ivCaixab4"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />

    <TextView
        android:id="@+id/tvAkon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/akon"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/ivAkon"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatYouGot"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="253dp" />


</androidx.constraintlayout.widget.ConstraintLayout>